# kamas

./: Makefile  cli.py  kamastrainer.db  pyproject.toml  tool.ty
apps/dashboard/: kamastrainer.db  main.py  pyproject.toml
apps/dashboard/kamas_dashboard/: api.py  db.py  helpers.py  models.py  serve.py
apps/dashboard/kamas_dashboard/views/: __init__.py
apps/dashboard/templates/: base.html  index.html  runs.html  strategy_graph.html  strategy_test.html
apps/dashboard/templates/components/: runs_table.html
libs/core/: pyproject.toml
libs/core/kamas_core/: api.py  helpers.py  time.py
libs/core/kamas_core/critters/: aggregators.py  indicators.py  operators.py  registry.py
libs/core/kamas_core/engine/: graph.py  loader.py  schema.py
libs/core/kamas_core/interactors/: constants.py  interact.py  mt5.py  oanda.py  yahoo.py
libs/core/tests/: test_helpers.py
libs/kamasTrainer/: pyproject.toml
libs/kamasTrainer/kamas_trainer/: helpers.py
libs/kamasTrainer/kamas_trainer/backtest/: backtester.py
libs/kamasTrainer/kamas_trainer/critters/: indicators.py  operators.py  registry.py
libs/kamasTrainer/kamas_trainer/engine/: builder.py  graph.py  loader.py  schema.py  utils.py
libs/trader/: pyproject.toml
libs/trader/kamas_trader/: events.py  models.py  orchestrator.py  rules.py  trader.py
libs/trainer/: pyproject.toml
libs/trainer/kamas_trainer/: backtester.py  periods.py  simulate.py
libs/trainer/kamas_trainer/data/: feeder.py
libs/trainer/kamas_trainer/engine/: context.py
notebooks/: Debug.ipynb
notebooks/.ipynb_checkpoints/: Debug-checkpoint.ipynb
strategies/: c1br1c2v copy.toml  c1br1c2v.toml
