[project]
name = "kamas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "kamas-dashboard",
  "kamas-core",
  "kamas-trader",
  "kamas-trainer",
  "ty>=0.0.8",
  "black>=25.12.0",
]

[tool.uv.workspace]
members = ["libs/*", "apps/*"]

[tool.uv.sources]
kamas-core = { workspace = true }
kamas-trader = { workspace = true }
kamas-trainer = { workspace = true }
kamas-dashboard = { workspace = true }

[tool.ty.environment]
root = [
  "libs/core",
  "libs/trader",
  "libs/trainer",
  "apps/dashboard"
]
python = "./.venv"
extra-paths = [
  "libs/core",
  "libs/trader",
  "libs/trainer",
  "apps/dashboard"
]

[tool.black]
line-length = 88

[dependency-groups]
dev = [
    "notebook>=7.5.1",
    "pytest>=9.0.2",
]
