[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kamas-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
    "kamas-core",
    "kamas-trainer",
    "kamas-trader",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
]

[project.scripts]
serve = "kamas_dashboard.serve:main"

[tool.setuptools.packages.find]
include = ["kamas_dashboard"]
