[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kamas-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.4.0",
    "metatrader5>=5.0.5430; platform_system == 'Windows'",
    "numpy>=2.3.5",
    "yfinance>=1.0",
    "pandas>=2.3.3",
]
